--- a/loginProject/loginApp/templates/loginApp/index.html
+++ b/loginProject/loginApp/templates/loginApp/index.html
@@ -3,13 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'loginApp/index.css' %}">
+
+
 </head>
 <body>
 <h1>Test</h1>
 {% for eachName in names %}
 <h3>{{ eachName }}</h3>
 {% endfor %}
+
+{% load static %}
+<link rel="stylesheet" href="{% static 'loginApp/css/index.css' %}">
+<script src="{% static 'loginApp/js/index.js' %}"></script>
+<img src="{% static 'loginApp/images/download.png' %}" alt="">
+
 </body>
 </html>
