--- a/loginProject/loginApp/static/loginApp/css/index.css
+++ b/loginProject/loginApp/static/loginApp/css/index.css
@@ -1,3 +1,11 @@
 body{
     background-color: red;
 }
+
+section{
+    display: grid;
+    grid-template-areas:
+        "teacher1 . . "
+        ". teacher2 ."
+        ". . teacher3";
+}
