--- a/loginProject/loginApp/static/loginApp/css/index.css
+++ b/loginProject/loginApp/static/loginApp/css/index.css
@@ -4,8 +4,44 @@ body{
 
 section{
     display: grid;
-    grid-template-areas:
-        "teacher1 . . "
-        ". teacher2 ."
-        ". . teacher3";
+    grid-template-columns: repeat(3, 1fr);
 }
+
+#teacher1{
+    grid-column: 1;
+    grid-row: 1;
+}
+
+#teacher2{
+    grid-column: 2;
+    grid-row: 2;
+}
+
+#teacher3{
+    grid-column: 3;
+    grid-row: 3;
+}
+
+/*section{*/
+/*    display: grid;*/
+/*    grid-template-columns: 1fr 1fr 1fr;   !*repeat(3, 1fr)*!*/
+/*    grid-template-areas:*/
+/*        "teacher1 . . "*/
+/*        ". teacher2 ."*/
+/*        ". . teacher3";*/
+/*}*/
+
+/*#teacher1{*/
+/*    background-color: lightgreen;*/
+/*    grid-area: teacher1;*/
+/*}*/
+
+/*#teacher2{*/
+/*    background-color: hotpink;*/
+/*    grid-area: teacher2;*/
+/*}*/
+
+/*#teacher3{*/
+/*    background-color: teal;*/
+/*    grid-area: teacher3;*/
+/*}*/
